<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingActivity">

    <EditText
        android:id="@+id/dollar_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btn_dollar_label"
        android:inputType="numberDecimal"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/euro_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btn_euro_label"
        android:paddingVertical="16dp"
        android:inputType="numberDecimal"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/won_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btn_won_label"
        android:inputType="numberDecimal"
        android:textSize="24dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/btn_save_label"
        android:textAllCaps="true" />
</LinearLayout>