<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/inp1"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"

        android:hint="@string/height"
        android:gravity="center"/>
    <EditText
        android:id="@+id/inp2"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/weight"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="计算BMI"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="BMI："
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

</LinearLayout>